@@ -1437,8 +1437,18 @@ public class TrackerItemServiceImpl implements TrackerItemService {
     public List<TrackerEntity> findTrackersBySprint(Long sprintId) {
         Long projectId = (Long) SecurityUtils.get(SecurityUtils.PROJECT_ID);
         List<Long> trackerIds = trackerItemDao.findBySprintIds(projectId,List.of(sprintId))
-                .stream().map(TrackerItemEntity::getTrackerId).collect(Collectors.toList());
+                .stream().map(TrackerItemEntity::getTrackerId).distinct().toList();
         return trackerDao.findByIds(trackerIds, TrackerEntity.class,true);
+    }
+
+    @Override
+    public List<Long> findItemIdsBySprint(Long sprintId) {
+        Long projectId = (Long) SecurityUtils.get(SecurityUtils.PROJECT_ID);
+        EnumItemVo excludeMeaning = enumService.findOneEnumItemByCode(projectId, EnumCodes.TRACKER_STATUS_MEANING, "CLOSED");
+        if (ObjectUtils.isEmpty(excludeMeaning)) {
+            excludeMeaning=EnumItemVo.builder().build();
+        }
+        return trackerItemDao.findIdsBySprintId(projectId,sprintId,excludeMeaning.getId());
     }
 
     @Override
